# diaryofapolymath

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc  Dockerfile  Dockerfile.build  Dockerfile.release  Dockerfile.test  Jenkinsfile  Pipfile  README.md  nginx.conf  package-lock.json  package.json  pyproject.toml  run  supervisord.conf  vite.config.js
src/: conftest.py  db.sqlite3  manage.py
src/about/: admin.py  managers.py  models.py  tests.py  views.py
src/about/migrations/: 0001_initial.py  0002_alter_link_options_alter_timeline_options_and_more.py  0002_auto_20231125_1649.py  0003_alter_profile_managers.py
src/about/templates/about/: index.html
src/base/: middlewares.py  settings.py  urls.py  wsgi.py
src/base/settings/: base.py  development.py  production.py  test.py
src/base/static/base/css/: jquery-ui-1.12.icon-font.min.css  jquery-ui.min.css  material-icons.min.css  normalize.min.css  terminal.css  theme.css
src/base/static/base/js/: index.js
src/base/static/base/js/controllers/: contentParser.js  theme.js
src/base/static/base/js/jquery/: jquery-ui.min.js
src/base/templates/base/: base.html  index.html
src/base/templates/base/partials/: aside_menu.html  footer.html  navbar.html
src/blog/: admin.py  managers.py  models.py  tests.py  urls.py  views.py
src/blog/migrations/: 0001_initial.py
src/blog/templates/blog/: archive.html  index.html  post.html  tag.html
src/blog/templates/blog/partials/: post_cta.html  post_stats.html  post_tags.html
src/blog/templatetags/: post_utils.py
src/exclusive/: admin.py  apps.py  models.py  tests.py  views.py
src/exclusive/migrations/: 0001_initial.py
src/exclusive/templates/exclusive/: index.html
src/projects/: admin.py  models.py  urls.py  views.py
src/projects/templates/projects/: index.html  post.html
